--- a/packages/flutter_form_bloc/pubspec.yaml
+++ b/packages/flutter_form_bloc/pubspec.yaml
@@ -13,7 +13,8 @@ dependencies:
     sdk: flutter
 
   flutter_bloc: ^8.0.0
-  form_bloc: ^0.29.1
+  form_bloc:
+    path: ../form_bloc
   equatable: ^2.0.3
   rxdart: ^0.27.3
   flutter_keyboard_visibility: ^5.0.2
